--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,17 +17,18 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.14.0
+
       - name: Install Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
           node-version: 22
 
       - name: Install dependencies
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.14.0
-          run_install: |
-            - args: [--frozen-lockfile]
+        run: pnpm install
 
       - name: Validate TypeScript
         run: pnpm run test
