--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,3 +8,6 @@ routes = [{ pattern = "github-discord.thatskyapplication.com", custom_domain = t
 
 [observability]
 enabled = true
+
+[version_metadata]
+binding = "CF_VERSION_METADATA"
